# chessAI

./: pyproject.toml
src/: chess_net.py  evaluate_model.py  game_results.json  history.py  self.py  stockfish.py  time.txt
src/gui/: gui.py
src/models/historical_model/model_1/: fingerprint.pb
src/models/reinforcement_learning_stockfish_model/: game_results.json  game_results.txt
src/models/reinforcement_learning_stockfish_model/model_1/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/models/reinforcement_learning_stockfish_model/model_13/: fingerprint.pb  saved_model.pb
src/models/reinforcement_learning_stockfish_model/model_15/: fingerprint.pb
src/models/reinforcement_learning_stockfish_model/model_18/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/models/reinforcement_learning_stockfish_model/model_19/: fingerprint.pb
src/models/reinforcement_learning_stockfish_model/model_255/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/models/reinforcement_learning_stockfish_model/model_3/: fingerprint.pb  saved_model.pb
src/models/reinforcement_learning_stockfish_model/model_39/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/models/reinforcement_learning_stockfish_model/model_4/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/models/reinforcement_learning_stockfish_model/model_47/: fingerprint.pb  saved_model.pb
src/models/self_learning_model/: game_results.json
src/utils/: buffer.py  clean.py  models.py  moves.py  stockfish_evaluation.py  tensors.py  train.py
(+38 files in other folders)
