[tool.poetry]
name = "local"
version = "0.1.0"
description = ""
authors = ["gen.dobr <gen.dobr@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
pygame = "^2.5.2"
chess = "^1.10.0"

[tool.poetry.dev-dependencies]
pep8-naming = "0.13.*"
flake8 = "5.0.*"
poethepoet = "0.16.*"
pytest = "7.*"
pytest-sugar = "0.9.*"
pytest-asyncio = "0.19.*"
pytest-snapshot = "0.9.*"
grpcio-tools = "1.49.*"
mypy = "0.971"
mypy-protobuf = "3.3.*"
black = "22.8.*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[tool.poe.tasks]
format = "black ."
test = "pytest"

[tool.pytest.ini_options]
addopts = "-p no:warnings"
filterwarnings = [
  "error"
]